tests/paczka1/fuzzy1/80252832.err
Error in line 8: JBkYfChLjR A682 48,7
Error in line 13: JBkYfChLjR S680 50,7
Error in line 15: S426 S680 9,6
Error in line 20: S426 S426 -1,1
Error in line 18: JBkYfChLjR A644 14,1
Error in line 22: JBkYfChLjR S680 4,8
Error in line 25: KT9IwtVFEQw S680 76,8
Error in line 19: S426 S426 90,6
Error in line 30: 5LjpEXiTBhc S426 86,5
Error in line 34: SI26 A6II 1,I
Error in line 28: S426 S680 7,1
Error in line 38: JBkYfChLjR S<26 120,8
